--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>AI Face Detection</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script defer src="face-api.min.js"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js'></script>
   <script defer src="script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js'></script>
   <style>
     video {
       border-radius: 20px;
